src/main/java/org/pcl/grammaire/Grammar.java
package org.pcl.grammaire;

import org.pcl.ColorAnsiCode;
import org.pcl.Token;
import org.pcl.ig.PCLWindows;
import org.pcl.structure.automaton.TokenType;
import org.pcl.structure.tree.Node;
import org.pcl.structure.tree.SyntaxTree;

import java.util.ArrayList;
import java.util.NoSuchElementException;

public class Grammar {

    public Boolean error = false;

    private int numberErrors = 0;

    public Boolean firstTime = true;

    private int indexLastError = -1;


    public Token currentToken = null;
    public SyntaxTree syntaxTree = null;
    public SyntaxTree ast = null;
    private Boolean indicateur_acces = false;
    public int tokensIndex = 0;
    private String file;
    ArrayList<Token> tokens;

    public Grammar(ArrayList<Token> tokens, String file){
        this.tokens = tokens;
        this.file = file;
    }

    public Grammar(ArrayList<Token> tokens){
        this(tokens, "test");
    }

    private void printError(String expectedMessage, Token currentToken){
        if (!firstTime) return;

        firstTime = false;
        boolean multiples = expectedMessage.contains(" ");
        numberErrors++;
        System.out.println( file + ":" + currentToken.getLineNumber() + ":" + ColorAnsiCode.ANSI_RED + " error:" + ColorAnsiCode.ANSI_RESET +
                " expected " + (multiples ? " one of them": "") + " \"" + expectedMessage + "\" got [value=" + currentToken.getValue() + " type=" + currentToken.getType() + "]");
        if (expectedMessage.equals(";"))
            System.out.println(getLineToken(tokens.get(tokensIndex - 1).getLineNumber(), currentToken) + "\n");
        else
            System.out.println(getLineToken(currentToken.getLineNumber(), currentToken) + "\n");
        if (tokensIndex > indexLastError + 1 || indexLastError == -1) {
            GrammarErrorUtility.ProceedAnalysis(expectedMessage, this, currentToken.getLineNumber(), file);
        }
        error = true;
    }

    public ArrayList<Token> getTokens() {
        return tokens;
    }

    public int getIndexLastError() {
        return indexLastError;
    }

    public static  Grammar createGrammarError(Grammar grammar, int decal, Token newToken, String file) {
        Grammar grammarError = new Grammar(GrammarErrorUtility.deepClone(grammar.tokens), file);

        grammarError.indexLastError = grammar.tokensIndex;
        grammarError.tokens.add(grammar.tokensIndex + decal, newToken);

        return grammarError;
    }

    private String getLineToken(long line, Token currentToken) {
        StringBuilder lineToken = new StringBuilder();
        for (Token token: tokens) {
            if (token.getLineNumber() == line) {
                if (token == currentToken) {
                    lineToken.append(ColorAnsiCode.ANSI_RED).append(token.getValue()).append(ColorAnsiCode.ANSI_RESET).append(" ");
                } else {
                    lineToken.append(token.getValue()).append(" ");
                }
            }
        }
        return lineToken.toString();
    }

    public int getNumberErrors() {
        return numberErrors;
    }

    public void setNumberErrors(int numberErrors) {
        this.numberErrors = numberErrors;
    }

    public SyntaxTree getSyntaxTree() {
        if (this.tokens.size() == 0) {
            return null;
        }
        this.currentToken = tokens.get(tokensIndex);
        fichier();
        return this.syntaxTree;
    }

    public int getTokensIndex() {
        return tokensIndex;
    }

    // terminals procedures

    public void terminalAnalyse(String terminal, Node node){
        if(!this.error){
            if(currentToken.getValue().equalsIgnoreCase(terminal)){
                Node terminalNode = new Node(currentToken);
                node.addChild(terminalNode);
                if (tokensIndex != tokens.size() - 1){
                    this.tokensIndex++;
                    currentToken = this.tokens.get(this.tokensIndex);
                }
            }
            else{
                error = true;
                printError(terminal, currentToken);
                //System.out.println("Erreur syntaxique dans l'analyse de terminal : terminal attendu : " + terminal + " != " + currentToken.getValue() + " = current token" + " ligne " + currentToken.getLineNumber());
            }
        }
    }

    // non-terminals procedures

    //axiom
    void fichier(){
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase("with")) {
                Node nodeFichier = new Node("Fichier");
                this.syntaxTree = new SyntaxTree(nodeFichier);
                terminalAnalyse("with", nodeFichier);
                terminalAnalyse("Ada", nodeFichier);
                terminalAnalyse(".", nodeFichier);
                terminalAnalyse("Text_IO", nodeFichier);
                terminalAnalyse(";", nodeFichier);
                terminalAnalyse("use", nodeFichier);
                terminalAnalyse("Ada", nodeFichier);
                terminalAnalyse(".", nodeFichier);
                terminalAnalyse("Text_IO", nodeFichier);
                terminalAnalyse(";", nodeFichier);
                terminalAnalyse("procedure", nodeFichier);
                ident(nodeFichier);
                terminalAnalyse("is", nodeFichier);
                declstar(nodeFichier);
                terminalAnalyse("begin", nodeFichier);
                instr(nodeFichier);
                instrstar(nodeFichier);
                terminalAnalyse("end", nodeFichier);
                identinterro(nodeFichier);
                terminalAnalyse(";", nodeFichier);
                if (this.tokensIndex != this.tokens.size() - 1) {
                    error = true;
                    printError("null", currentToken);
                    //System.out.println("Erreur syntaxique : terminal attendu : null");
                }
            }
            else error = true;
            if (error) {
                printError("with", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : with" + " != " + currentToken.getValue() + " = current token" + " ligne " + currentToken.getLineNumber());
            }
        }
    }


    void declstar(Node node) {
        if (!error) {
            if (currentToken.getValue().equalsIgnoreCase("begin")) {
                return;
            }
            else if (currentToken.getValue().equalsIgnoreCase("procedure")
                    || currentToken.getValue().equalsIgnoreCase("type")
                    || currentToken.getValue().equalsIgnoreCase("function")
                    || currentToken.getType() == TokenType.IDENTIFIER) {
                Node nodeDeclstar = new Node("nodeDeclstar");
                node.addChild(nodeDeclstar);
                decl(nodeDeclstar);
                declstar(nodeDeclstar);
            }
            else error = true;
            if (error) {
                printError("begin procedure type function", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : begin ou procedure ou type ou function" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }


    void instrstar(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase(")")
                    || currentToken.getValue().equalsIgnoreCase("else")
                    || currentToken.getValue().equalsIgnoreCase("end")
                    || currentToken.getValue().equalsIgnoreCase("elsif")){ return; }
            else if(currentToken.getValue().equalsIgnoreCase("begin")
                    || currentToken.getValue().equalsIgnoreCase("return")
                    || (currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)
                    || currentToken.getValue().equalsIgnoreCase("-")
                    || currentToken.getType() == TokenType.NUMBER
                    || currentToken.getType() == TokenType.CHARACTER
                    || currentToken.getValue().equalsIgnoreCase("true")
                    || currentToken.getValue().equalsIgnoreCase("false")
                    || currentToken.getValue().equalsIgnoreCase("null")
                    || currentToken.getValue().equalsIgnoreCase("new")
                    || currentToken.getValue().equalsIgnoreCase("not")
                    || currentToken.getValue().equalsIgnoreCase("character")
                    || currentToken.getValue().equalsIgnoreCase("if")
                    || currentToken.getValue().equalsIgnoreCase("for")
                    || currentToken.getValue().equalsIgnoreCase("while")
                    || currentToken.getType() == TokenType.IDENTIFIER){
                Node nodeInstrstar = new Node("nodeInstrstar");
                node.addChild(nodeInstrstar);
                instr(nodeInstrstar);
                instrstar(nodeInstrstar);
            }
            else error = true;
            if (error) {
                printError("begin return ( - number character not true false null new character if for while ident ) else elsif end", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : begin ou return ou ( ou moins ou number ou character ou true ou false ou null ou new ou character ou if ou for ou while ou ident ou ) ou else ou elsif" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void identinterro(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase(";")){return; }
            else if(currentToken.getType() == TokenType.IDENTIFIER){
                Node nodeIdentinterro = new Node("nodeIdentinterro");
                node.addChild(nodeIdentinterro);
                ident(nodeIdentinterro);
            }
            else error = true;
            if (error) {
                printError("; ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ; ou ident" + " != " + currentToken.getValue() + " = current token" + " Type : " + currentToken.getType());
            }
        }
    }

    void identstar_virgule(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase(":")){return; }
            else if (currentToken.getValue().equalsIgnoreCase(",")){
                Node nodeIdentstar = new Node("nodeIdentstar");
                node.addChild(nodeIdentstar);
                terminalAnalyse(",", nodeIdentstar);
                ident(nodeIdentstar);
                identstar_virgule(nodeIdentstar);
            }
            else error = true;
            if (error) {
                printError(": ,", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : , ou ident" + " != " + currentToken.getValue() + " = current token" );
            }
        }
    }

    void decl(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase("type")){
                Node nodeDecl = new Node("nodeDecl");
                node.addChild(nodeDecl);
                terminalAnalyse("type", nodeDecl);
                ident(nodeDecl);
                decl2(nodeDecl);
            }
            else if(currentToken.getValue().equalsIgnoreCase("procedure")){
                Node nodeDecl = new Node("nodeDecl");
                node.addChild(nodeDecl);
                terminalAnalyse("procedure", nodeDecl);
                ident(nodeDecl);
                paramsinterro(nodeDecl);
                terminalAnalyse("is", nodeDecl);
                declstar(nodeDecl);
                terminalAnalyse("begin", nodeDecl);
                instr(nodeDecl);
                instrstar(nodeDecl);
                terminalAnalyse("end", nodeDecl);
                identinterro(nodeDecl);
                terminalAnalyse(";", nodeDecl);
            } else if (currentToken.getValue().equalsIgnoreCase("function")) {
                Node nodeDecl = new Node("nodeDecl");
                node.addChild(nodeDecl);
                terminalAnalyse("function", nodeDecl);
                ident(nodeDecl);
                paramsinterro(nodeDecl);
                terminalAnalyse("return", nodeDecl);
                type(nodeDecl);
                terminalAnalyse("is", nodeDecl);
                declstar(nodeDecl);
                terminalAnalyse("begin", nodeDecl);
                instr(nodeDecl);
                instrstar(nodeDecl);
                terminalAnalyse("end", nodeDecl);
                identinterro(nodeDecl);
                terminalAnalyse(";", nodeDecl);
            } else if ((currentToken.getType() == TokenType.IDENTIFIER)) {
                Node nodeDecl = new Node("nodeDecl");
                node.addChild(nodeDecl);
                ident(nodeDecl);
                identstar_virgule(nodeDecl);
                terminalAnalyse(":", nodeDecl);
                type(nodeDecl);
                exprinterro(nodeDecl);
                terminalAnalyse(";", nodeDecl);
            }
            else error = true;
            if (error) {
                printError("type procedure function ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : type ou procedure ou function ou ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void decl2(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase(";")){
                Node nodeDecl2 = new Node("nodeDecl2");
                node.addChild(nodeDecl2);
                terminalAnalyse(";", nodeDecl2);
            } else if (currentToken.getValue().equalsIgnoreCase("is")) {
                Node nodeDecl2 = new Node("nodeDecl2");
                node.addChild(nodeDecl2);
                terminalAnalyse("is", nodeDecl2);
                decl3(nodeDecl2);
            }
            else error = true;
            if (error) {
                printError("; is", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ; ou is" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void decl3(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase("access")){
                Node nodeDecl3 = new Node("nodeDecl3");
                node.addChild(nodeDecl3);
                terminalAnalyse("access", nodeDecl3);
                ident(nodeDecl3);
                terminalAnalyse(";", nodeDecl3);
            } else if (currentToken.getValue().equalsIgnoreCase("record")) {
                Node nodeDecl3 = new Node("nodeDecl3");
                node.addChild(nodeDecl3);
                terminalAnalyse("record", nodeDecl3);
                champs(nodeDecl3);
                champstar(nodeDecl3);
                terminalAnalyse("end", nodeDecl3);
                terminalAnalyse("record", nodeDecl3);
                terminalAnalyse(";", nodeDecl3);
            }
            else error = true;
            if (error) {
                printError("access record", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : access ou record" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void champs(Node node) {
        if(!error){
            if(currentToken.getType() == TokenType.IDENTIFIER){
                Node nodeChamps = new Node("nodeChamps");
                node.addChild(nodeChamps);
                ident(nodeChamps);
                identstar_virgule(nodeChamps);
                terminalAnalyse(":", nodeChamps);
                type(nodeChamps);
                terminalAnalyse(";", nodeChamps);
            }
            else error = true;
            if (error) {
                printError("ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void exprinterro(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase(";")) return;
            else if (currentToken.getValue().equalsIgnoreCase(":=")) {
                Node nodeExprinterro = new Node("nodeExprinterro");
                node.addChild(nodeExprinterro);
                terminalAnalyse(":=", nodeExprinterro);
                expr(nodeExprinterro);
            }
            else error = true;
            if (error) {
                printError("; :=", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu := ; ou :" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void exprinterro2(Node node){
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase(";")) return;
            else if((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)
                    || currentToken.getValue().equalsIgnoreCase("-")
                    || currentToken.getType() == TokenType.NUMBER
                    || currentToken.getType() == TokenType.CHARACTER
                    || currentToken.getValue().equalsIgnoreCase("true")
                    || currentToken.getValue().equalsIgnoreCase("false")
                    || currentToken.getValue().equalsIgnoreCase("null")
                    || currentToken.getValue().equalsIgnoreCase("new")
                    || currentToken.getValue().equalsIgnoreCase("character")
                    || currentToken.getType() == TokenType.IDENTIFIER){
                expr(node);
            }
            else error = true;
            if (error) {
                printError("( - number character true false null new character ident ;", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ( ou - ou number ou character ou true ou false ou null ou new ou character ou ident ou ;" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }



    void champstar(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase("end"))return;
            else if(currentToken.getType() == TokenType.IDENTIFIER){
                Node nodeChampstar = new Node("nodeChampstar");
                node.addChild(nodeChampstar);
                champs(nodeChampstar);
                champstar(nodeChampstar);
            }
            else error = true;
            if (error) {
                printError("end ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : end ou ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void paramsinterro(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase("is") || currentToken.getValue().equalsIgnoreCase("return"))return;
            else if ((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)) {
                Node nodeParamsinterro = new Node("nodeParamsinterro");
                node.addChild(nodeParamsinterro);
                params(nodeParamsinterro);
            }
            else error = true;
            if (error) {
                printError("is return (", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : is ou return ou (" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void type(Node node) {
        if(!error){
            if ((currentToken.getType() == TokenType.IDENTIFIER) || currentToken.getValue().equalsIgnoreCase("character")) {
                Node nodeType = new Node("nodeType");
                node.addChild(nodeType);
                if (currentToken.getValue().equalsIgnoreCase("character")) {
                    terminalAnalyse("character", nodeType);
                } else {
                    ident(nodeType);
                }
            }
            else if (currentToken.getValue().equalsIgnoreCase("access")){
                Node nodeType = new Node("nodeType");
                node.addChild(nodeType);
                terminalAnalyse("access", nodeType);
                ident(nodeType);
            }
            else error = true;
            if (error) {
                printError("ident access", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ident ou access" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void params(Node node) {
        if(!error){
            if((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)){
                Node nodeParams = new Node("nodeParams");
                node.addChild(nodeParams);
                terminalAnalyse("(", nodeParams);
                param(nodeParams);
                paramstar_virgule(nodeParams);
                terminalAnalyse(")", nodeParams);
            }
            else error = true;
            if (error) {
                printError("(", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : (" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }


    void paramstar_virgule(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase(")"))return;
            else if (currentToken.getValue().equalsIgnoreCase(";")) {
                Node nodeParamstar = new Node("nodeParamstar");
                node.addChild(nodeParamstar);
                terminalAnalyse(";", nodeParamstar);
                param(nodeParamstar);
                paramstar_virgule(nodeParamstar);
            }
            else error = true;
            if (error) {
                printError(") ;", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ; ou )" + " != " + currentToken.getValue() + " = current token" + " Type : " + currentToken.getType());
            }
        }
    }

    void param(Node node) {
        if(!error){
            if (currentToken.getType() == TokenType.IDENTIFIER || currentToken.getValue().equalsIgnoreCase("character")) {
                Node nodeParam = new Node("nodeParam");
                node.addChild(nodeParam);
                ident(nodeParam);
                identstar_virgule(nodeParam);
                terminalAnalyse(":", nodeParam);
                modeinterro(nodeParam);
                type(nodeParam);
            }
            else error = true;
            if (error) {
                printError("ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void mode(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase("in")){
                Node nodeMode = new Node("nodeMode");
                node.addChild(nodeMode);
                if (tokensIndex != tokens.size() - 1){
                    if (this.tokens.get(this.tokensIndex + 1).getValue().equalsIgnoreCase("out")) {
                        terminalAnalyse("in", nodeMode);
                        terminalAnalyse("out", nodeMode);
                    }
                    else {
                        terminalAnalyse("in", nodeMode);
                    }
                }
                else {
                    terminalAnalyse("in", nodeMode);
                }
            }
            else error = true;
            if (error) {
                printError("in", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : in" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void modeinterro(Node node) {
        if(!error){
            if(currentToken.getValue().equalsIgnoreCase("in")) {
                Node nodeModeinterro = new Node("nodeModeinterro");
                node.addChild(nodeModeinterro);
                mode(nodeModeinterro);
            } else if (currentToken.getType() == TokenType.IDENTIFIER || currentToken.getValue().equalsIgnoreCase("access") || currentToken.getValue().equalsIgnoreCase("character")) return;
            else error = true;
            if (error) {
                printError("in ident access", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : in ou ident ou access" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void expr(Node node) {
        if(!error){
            if ((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)
                    || currentToken.getValue().equalsIgnoreCase("-")
                    || currentToken.getType() == TokenType.NUMBER
                    || currentToken.getType() == TokenType.CHARACTER
                    || currentToken.getValue().equalsIgnoreCase("true")
                    || currentToken.getValue().equalsIgnoreCase("false")
                    || currentToken.getValue().equalsIgnoreCase("null")
                    || currentToken.getValue().equalsIgnoreCase("new")
                    || currentToken.getValue().equalsIgnoreCase("not")
                    || currentToken.getValue().equalsIgnoreCase("character")
                    || currentToken.getType() == TokenType.IDENTIFIER) {
                Node nodeExpr = new Node("nodeExpr");
                node.addChild(nodeExpr);
                terme_1(nodeExpr);
                priorite_or(nodeExpr);
            } else error = true;
            if (error) {
                printError("( - number character true false null new character ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ( ou - ou number ou character ou true ou false ou null ou new ou character ou ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void priorite_or(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase(";")
                    || currentToken.getValue().equalsIgnoreCase(",")
                    || currentToken.getValue().equalsIgnoreCase(")")
                    || currentToken.getValue().equalsIgnoreCase("then")
                    || currentToken.getValue().equalsIgnoreCase("..")
                    || currentToken.getValue().equalsIgnoreCase(":=")
                    || currentToken.getValue().equalsIgnoreCase("loop")) return;
            else if (currentToken.getValue().equalsIgnoreCase("or")) {
                Node nodePrioriteOr = new Node("nodePrioriteOr");
                node.addChild(nodePrioriteOr);
                terminalAnalyse("or", nodePrioriteOr);
                priorite_or_2(nodePrioriteOr);
            }
            else error = true;
            if (error) {
                printError("; , ) then .. loop or :=", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ; ou , ou ) ou or ou then ou . ou loop" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void priorite_or_2(Node node) {
        if(!error){
            if ((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)
                    || currentToken.getValue().equalsIgnoreCase("-")
                    || currentToken.getType() == TokenType.NUMBER
                    || currentToken.getType() == TokenType.CHARACTER
                    || currentToken.getValue().equalsIgnoreCase("true")
                    || currentToken.getValue().equalsIgnoreCase("false")
                    || currentToken.getValue().equalsIgnoreCase("null")
                    || currentToken.getValue().equalsIgnoreCase("new")
                    || currentToken.getValue().equalsIgnoreCase("not")
                    || currentToken.getValue().equalsIgnoreCase("character")
                    || currentToken.getType() == TokenType.IDENTIFIER) {
                Node nodePrioriteOr2 = new Node("nodePrioriteOr2");
                node.addChild(nodePrioriteOr2);
                terme_1(nodePrioriteOr2);
                priorite_or(nodePrioriteOr2);
            }
            else if (currentToken.getValue().equalsIgnoreCase("else")) {
                Node nodePrioriteOr2 = new Node("nodePrioriteOr2");
                node.addChild(nodePrioriteOr2);
                terminalAnalyse("else", nodePrioriteOr2);
                terme_1(nodePrioriteOr2);
                priorite_or(nodePrioriteOr2);
            } else error = true;
            if (error) {
                printError("( - number character true false null new not character ident else", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ( ou - ou number ou character ou true ou false ou null ou new ou character ou ident ou else" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void terme_1(Node node) {
        if(!error){
            if ((currentToken.getValue().equalsIgnoreCase("(") && currentToken.getType() == TokenType.SEPARATOR)
                    || currentToken.getValue().equalsIgnoreCase("-")
                    || currentToken.getType() == TokenType.NUMBER
                    || currentToken.getType() == TokenType.CHARACTER
                    || currentToken.getValue().equalsIgnoreCase("true")
                    || currentToken.getValue().equalsIgnoreCase("false")
                    || currentToken.getValue().equalsIgnoreCase("null")
                    || currentToken.getValue().equalsIgnoreCase("new")
                    || currentToken.getValue().equalsIgnoreCase("not")
                    || currentToken.getValue().equalsIgnoreCase("character")
                    || currentToken.getType() == TokenType.IDENTIFIER) {
                Node nodeTerme1 = new Node("nodeTerme1");
                node.addChild(nodeTerme1);
                terme_2(nodeTerme1);
                priorite_and(nodeTerme1);
            }
            else error = true;
            if (error) {
                printError("( - number character true false null new not character ident", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ( ou - ou number ou character ou true ou false ou null ou new ou character ou ident" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }

    void priorite_and(Node node) {
        if(!error){
            if (currentToken.getValue().equalsIgnoreCase(";")
                    || currentToken.getValue().equalsIgnoreCase(",")
                    || currentToken.getValue().equalsIgnoreCase(")")
                    || currentToken.getValue().equalsIgnoreCase("or")
                    || currentToken.getValue().equalsIgnoreCase("then")
                    || currentToken.getValue().equalsIgnoreCase("..")
                    || currentToken.getValue().equalsIgnoreCase(":=")
                    || currentToken.getValue().equalsIgnoreCase("loop")) return;
            else if (currentToken.getValue().equalsIgnoreCase("and")) {
                Node nodePrioriteAnd = new Node("nodePrioriteAnd");
                node.addChild(nodePrioriteAnd);
                terminalAnalyse("and", nodePrioriteAnd);
                priorite_and_2(nodePrioriteAnd);
            }
            else error = true;
            if (error) {
                printError("; , ) or then .. loop := and", currentToken);
                //System.out.println("Erreur syntaxique : terminal attendu : ; ou , ou ) ou or ou then ou . ou loop" + " != " + currentToken.getValue() + " = current token");
            }
        }
    }
